Add Phase 1 pages and blocks

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -41,6 +41,7 @@
 <div class="shell">
     <nav>
         <a href="{{ url_for('main.home') }}">Home</a>
+        <a href="{{ url_for('pages.pages_index') }}">Pages</a>
         <a href="#">Notes</a>
         <a href="#">Projects</a>
         <a href="#">Metrics</a>
