--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -44,6 +44,7 @@
 <div class="shell">
     <nav>
         <a href="{{ url_for('main.home') }}">Home</a>
+        <p style="margin:0.8rem 0 0.35rem;font-size:0.85rem;color:#64748b;font-weight:700;">Databases</p>
         <a href="{{ url_for('databases.tasks_list') }}">Tasks</a>
         <a href="{{ url_for('databases.projects_list') }}">Projects</a>
         <a href="{{ url_for('databases.companies_list') }}">Companies</a>
